--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,35 @@
           </instructions>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>move files</echo>
+                <copy file="target/${pom.artifactId}-${pom.version}.jar" tofile="${user.home}/temp/${pom.artifactId}-${pom.version}.jar"/>
+              </tasks>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.1</version>
+        <configuration>
+          <outputDirectory>${user.home}/temp</outputDirectory>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
